deploy/okd/pod-bases/dev-bastion/dev-infra-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-workspaces
  namespace: ${SANDBOX_NAMESPACE}
spec:
  clusterIP: None
  selector:
    type: dev-workspace
  ports:
    - name: ssh
      port: 2222
      targetPort: 2222
